# ue4-api

./: .gitmodules  ApiPlugin.uplugin  README.md
Source/ApiPlugin/: ApiPlugin.Build.cs
Source/ApiPlugin/Classes/api/: API.h  Actor.h  Camera.h  Debug.h  Draw.h  Events.h  Input.h  Marker.h  Physics.h  Player.h  World.h
Source/ApiPlugin/Classes/npp/: format.h  iterator.h  option.h  result.h
Source/ApiPlugin/Private/: ApiPlugin.cpp  ApiPluginPrivatePCH.h  Debug.cpp
Source/ApiPlugin/Private/api/: Actor.cpp  Camera.cpp  Debug.cpp  Draw.cpp  Input.cpp  Marker.cpp  Physics.cpp  Player.cpp  World.cpp
Source/ApiPlugin/Private/test/: TestApiActor.cpp  TestApiActor.h  TestApiCmp.cpp  TestApiCmp.h
Source/ApiPlugin/Public/: IApiPlugin.h
lib/base64/: CMakeLists.txt  README.md
lib/base64/apps/: encode.cpp
lib/base64/src/base64/: decode.cpp  decode.h  encode.cpp  encode.h
lib/base64/tests/: test-encoding.cpp  test-inline-data.cpp
lib/base64/tests/data/: ASSET__CMakeLists_txt.h  ASSET__README_md.h
lib/compress/: CMakeLists.txt  README.md
lib/compress/src/compress/: compress.h  miniz.cpp
lib/compress/tests/: test-compress.cpp
lib/npp/: CMakeLists.txt
lib/npp/src/npp/: format.h  iterator.h  option.h  resource.h  result.h
lib/npp/src/npp/test/: test.h  test_result.cpp  test_result.h  test_suite.cpp  test_suite.h
lib/npp/tests/: test-format.cpp  test-iterator.cpp  test-option.cpp  test-resource.cpp  test-result.cpp
